Sidebar: ui-drawing-area: avoid hard coded pixels
Before this change, the daRatioTop images was forced to be at huge
300px size.

The 300px was introduced in 07bbf1d38f6d18d383fd1c71bc47e0f1ca38bc5b
to make sure that the Master slide thumbnails do not get cropped, at
that time we didn't have things like daRatioTop

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -17,7 +17,7 @@ img.sidebar.ui-image {
 }
 
 /* Impress -> Master Slides images should fit in the visible width */
-img.sidebar.ui-drawing-area {
+#SdLayoutsPanelPanelExpander img.sidebar.ui-drawing-area {
 	width: 300px;
 }
 
